no SoaS spin for F24

--- a/spins.fedoraproject.org/data/content/index.html
+++ b/spins.fedoraproject.org/data/content/index.html
@@ -78,14 +78,14 @@
     	  	</div>
     	  </div>
     	  <div class="row">
-    	  	<div class="col-xs-10 col-xs-offset-1 text-center">
+    	  	<div class="col-xs-10 col-xs-offset-1 text-center bottom-space">
     	  	  <p class="screenshot bottom-border"><a href="/${lang}/cinnamon"><img class="spin-banner" src="${path}/static/images/cinnamon-banner.png" alt="Cinnamon banner" /></a><br />
     	  	  <span class="grey">${_('A modern desktop featuring traditional Gnome user experience.')}</span></p>
   	  	  </div>
   	    </div>
        </div>
 
-       <div class="high">
+<!--       <div class="high">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
     	  	  <a href="/${lang}/soas"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-soas.jpg" alt="SoaS Screenshot" /></a>
@@ -98,6 +98,7 @@
   	  	  </div>
   	    </div>
 	     </div>
+-->
      </div>
   	</div>
   </header>
