update all image sizes for F24

--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -182,7 +182,7 @@
             <h3>${_('Xfce Desktop')}</h3>
             </div>
             <div class="col-lg-3">
-            <p>${Markup(_('%sMB raw image')) % global_variables.iso_size['ARM_Xfce']}</p>
+            <p>${Markup(_('%sGB raw image')) % global_variables.iso_size['ARM_Xfce']}</p>
             </div>
             <div class="col-lg-4">
             <p class="download"><a href="${global_variables.path['download']}/${global_variables.release['curr_id']}/Images/armhfp/Fedora-Xfce-armhfp-${global_variables.release['curr_arm_id']}-${global_variables.release['RC_gold']}-sda.raw.xz">${_('Download')}</a> | <a href="verify.html">${_('Verify')}</a></p>
