readd unofficial design suite

--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -24,36 +24,40 @@
           <span class="grey">${_('Powerful completely open-source and free tool for amateurs and professionals.')}</span></div>
         </div>
         <div class="col-md-5 text-center fadescreen">
-          <div class="spin-banner"><a href="/${lang}/games"><img class="screenshot-banner" src="${path}/static/images/games-banner.png" alt="Games banner" /></a></div>
-          <a href="/${lang}/games"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-games.jpg" alt="Games Screenshot" /></a>
-          <div class="screenshot-text bottom-border"><a href="/${lang}/games"><h3>${_('Unleash your inner musician.')}</h3></a>
-          <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
+          <div class="spin-banner"><a href="/${lang}/design-suite"><img class="screenshot-banner" src="${path}/static/images/design-suite-banner.png" alt="Design suite banner" /></a></div>
+          <a href="/${lang}/design-suite"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-design.jpg" alt="Design-suite Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/design-suite"><h3>${_('Open Creativity.')}</h3></a>
+          <span class="grey">${_('Visual design, multimedia production, and publishing suite of free and open source creative tools.')}</span></div>
         </div>
        </div>
 
        <div class="row top-margin high">
         <div class="col-md-5 col-md-offset-1 text-center fadescreen">
+          <div class="spin-banner"><a href="/${lang}/games"><img class="screenshot-banner" src="${path}/static/images/games-banner.png" alt="Games banner" /></a></div>
+          <a href="/${lang}/games"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-games.jpg" alt="Games Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/games"><h3>${_('Unleash your inner musician.')}</h3></a>
+          <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
+        </div>
+        <div class="col-md-5 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/robotics"><img class="screenshot-banner" src="${path}/static/images/robotics-suite-banner.png" alt="Robotics banner" /></a></div>
           <a href="/${lang}/robotics"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-robotics.jpg" alt="Robotics Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/robotics"><h3>${_('Dive into Robotics.')}</h3></a>
           <span class="grey">${_('A wide variety of free and open robotics software packages for beginners and experts in robotics.')}</span></div>
         </div>
-        <div class="col-md-5 text-center fadescreen">
-          <div class="spin-banner"><a href="/${lang}/scientific"><img class="screenshot-banner" src="${path}/static/images/scientific-banner.png" alt="Scientific banner" /></a></div>
-          <a href="/${lang}/scientific"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-scientific.jpg" alt="Scientific Screenshot" /></a>
-  	  	  <div class="screenshot-text bottom-border"><a href="/${lang}/scientific"><h3>${_('Open source scientific computing.')}</h3></a>
-          <span class="grey">${_('A bundle of open source scientific and numerical tools used in research.')}</span></div>
-        </div>
        </div>
 
-       <div class="row bottom-space top-margin high">
-        <div class="col-md-6 col-md-offset-3">
-         <div class="col-md-10 col-md-offset-1 text-center fadescreen">
+       <div class="row top-margin high">
+        <div class="col-md-5 col-md-offset-1 text-center fadescreen">
+          <div class="spin-banner"><a href="/${lang}/scientific"><img class="screenshot-banner" src="${path}/static/images/scientific-banner.png" alt="Scientific banner" /></a></div>
+          <a href="/${lang}/scientific"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-scientific.jpg" alt="Scientific Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/scientific"><h3>${_('Open source scientific computing.')}</h3></a>
+          <span class="grey">${_('A bundle of open source scientific and numerical tools used in research.')}</span></div>
+        </div>
+        <div class="col-md-5 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/security"><img class="screenshot-banner" src="${path}/static/images/security-lab-banner.png" alt="Security Lab banner" /></a></div>
           <a href="/${lang}/security"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-security.jpg" alt="Security Lab Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/security"><h3>${_('Thorough, safe and secure.')}</h3></a>
           <span class="grey">${_('A safe test environment to work on security auditing, forensics, system rescue and teaching security testing methodologies.')}</span></div>
-         </div>
         </div>
        </div>
       </div>
