--- a/spins.fedoraproject.org/data/content/index.html
+++ b/spins.fedoraproject.org/data/content/index.html
@@ -85,7 +85,7 @@
   	    </div>
        </div>
 
-<!--       <div class="high">
+       <div class="high">
     	  <div class="row">
     	  	<div class="col-xs-10 col-xs-offset-1 text-center top-space">
     	  	  <a href="/${lang}/soas"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-soas.jpg" alt="SoaS Screenshot" /></a>
@@ -98,7 +98,6 @@
   	  	  </div>
   	    </div>
 	     </div>
--->
      </div>
   	</div>
   </header>
