--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -46,7 +46,7 @@
         </div>
        </div>
 
-       <div class="row top-margin high">
+       <div class="row top-margin bottom-space high">
         <div class="col-md-5 col-md-offset-1 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/scientific"><img class="screenshot-banner" src="${path}/static/images/scientific-banner.png" alt="Scientific banner" /></a></div>
           <a href="/${lang}/scientific"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-scientific.jpg" alt="Scientific Screenshot" /></a>
@@ -71,6 +71,14 @@
           <a href="/${lang}/astronomy"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-astronomy.jpg" alt="Astronomy Screenshot" /></a>
           <div class="screenshot-text bottom-border"><a href="/${lang}/Astronomy"><h3>${_('Explore the Outer Space.')}</h3></a>
           <span class="grey">${_('Powerful completely open-source and free tool for amateurs and professionals.')}</span></div>
+        </div>
+      </div>
+      <div class="row top-margin">
+        <div class="col-xs-12 text-center fadescreen">
+          <div class="spin-banner"><a href="/${lang}/design-suite"><img class="screenshot-banner" src="${path}/static/images/design-suite-banner.png" alt="Design suite banner" /></a></div>
+          <a href="/${lang}/design-suite"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-design.jpg" alt="Design-suite Screenshot" /></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/design-suite"><h3>${_('Open Creativity.')}</h3></a>
+          <span class="grey">${_('Visual design, multimedia production, and publishing suite of free and open source creative tools.')}</span></div>
         </div>
       </div>
       <div class="row top-margin">
