fix the disclaimer wording

--- a/labs.fedoraproject.org/data/content/design-suite/download/index.html
+++ b/labs.fedoraproject.org/data/content/design-suite/download/index.html
@@ -30,7 +30,7 @@
 <!-- Blurb to show if the spin/lab fails the final build -->
   		<div class="row">
   	  	  	<div class="col-md-12 text-center">
-        	<p class="warning">${Markup(_('This Spin failed to compose for the final release, however the nightly test compose contains the same package set as release and should meet most users needs. You can verify the test compose image with a dedicated CHECKSUM file for &lt;a href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/x86_64/Fedora-UNOFFICIAL-24-20160614.n.0-x86_64-CHECKSUM"&gt;64-bit&lt;/a&gt; and &lt;a href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/i386/Fedora-UNOFFICIAL-24-20160614.n.0-i386-CHECKSUM"&gt;32-bit&lt;/a&gt; images.'))}
+        	<p class="warning">${Markup(_('Although this spin failed to compose for the final release, the nightly test compose contains the same package set, and should meet most users\' needs. You can verify the test compose image with a dedicated CHECKSUM file for &lt;a href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/x86_64/Fedora-UNOFFICIAL-24-20160614.n.0-x86_64-CHECKSUM"&gt;64-bit&lt;/a&gt; and &lt;a href="http://dl.fedoraproject.org/pub/alt/unofficial/releases/24/i386/Fedora-UNOFFICIAL-24-20160614.n.0-i386-CHECKSUM"&gt;32-bit&lt;/a&gt; images.'))}
             </p>
         	</div>
   	  	</div>
