replace audio slogan with games for the games spin

--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -35,8 +35,8 @@
         <div class="col-md-5 col-md-offset-1 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/games"><img class="screenshot-banner" src="${path}/static/images/games-banner.png" alt="Games banner" /></a></div>
           <a href="/${lang}/games"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-games.jpg" alt="Games Screenshot" /></a>
-          <div class="screenshot-text bottom-border"><a href="/${lang}/games"><h3>${_('Unleash your inner musician.')}</h3></a>
-          <span class="grey">${_('For audio enthusiasts and musicians who want to create, edit and produce audio and music on Linux.')}</span></div>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/games"><h3>${_('Play with Fedora Today!')}</h3></a>
+          <span class="grey">${_('A collection and perfect show-case of the best games available in Fedora.')}</span></div>
         </div>
         <div class="col-md-5 text-center fadescreen">
           <div class="spin-banner"><a href="/${lang}/robotics"><img class="screenshot-banner" src="${path}/static/images/robotics-suite-banner.png" alt="Robotics banner" /></a></div>
