make a temporary atomic page until we build them again

--- a/getfedora.org/data/content/cloud/download/atomic.html
+++ b/getfedora.org/data/content/cloud/download/atomic.html
@@ -31,8 +31,8 @@
     <div class="container">
       <div class="row">
         <div class="col-md-7 col-md-offset-5 text-left recover-heading">
-          <h2>${Markup(_('Download Fedora %(rel)s Cloud')) % {'rel':global_variables.release['curr_id']}}</h2>
-            <p>${_('There are two main versions of Fedora Cloud available:')}
+          <h2>${Markup(_('Download Fedora Cloud'))}</h2>
+            <p>${_('There is only one main version of Fedora Cloud available:')}
               <ul>
                 <li>${Markup(_('&lt;a href="index.html"&gt;Base images&lt;/a&gt; suitable for creating VMs.'))}</li>
 <!--                <li>${Markup(_('&lt;a href="atomic.html"&gt;Atomic Host images&lt;/a&gt; for creating hosts for container deployment.'))}</li>
@@ -75,207 +75,12 @@
             <p>${_('Fedora Atomic Host images are updated roughly every two weeks, rather than on the main six-month Fedora cadence. Because development is moving quickly, only the latest major Fedora release is supported.')}</p>
             <p>${Markup(_('Note that different Fedora Atomic Host media are subject to different levels of automatic testing. We are making continuous improvements to these tests; &lt;a href="%s"&gt;click here&lt;/a&gt; to see the current test status.') % ('https://apps.fedoraproject.org/autocloud/jobs/'))}</p>
             <p class="bold">${Markup(_('You can learn more about the Atomic project at &lt;a href="%s"&gt;projectatomic.io&lt;/a&gt;.') % ('http://projectatomic.io/'))}</p>
-            <p py:if="not global_variables.release['atomic_freshness']" class="warning">${Markup(_('The latest two week build did not meet our testing criteria. The images available are from over %(atomic_age)s days ago. Check the Project Atomic blog for updates and information about Atomic blocker bugs.') % global_variables.release)}</p>
-            <p py:if="global_variables.release['atomic_freshness']" class="warning">${Markup(_('These are the latest official Fedora Atomic Host images, produced %(atomic_age)s days ago.') % global_variables.release)}</p>
-            <h3>${_('Atomic Host Image')}</h3>
+            <p class="warning">${Markup(_('There are no Atomic images available for Fedora %(rel)s. Please stand by and checkout this page in a few days, we are planning to build them within the first week of July.')) % {'rel':global_variables.release['curr_id']}}</p>
           </div>
       </div>
-      <!-- Mobile -->
-      <div class="row visible-xs">
-          <div class="col-xs-12">
-            <h5 class="bold">${_('qcow2 Image')}</h5>
-            <p>${Markup(_('This is Fedora %(rel)s Cloud Atomic Host in a Qcow2-formatted image for use with OpenStack.')) % {'rel':global_variables.release['curr_id']}}</p>
-            <a class="btn btn-success download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}.x86_64.qcow2" role="button">${_('Download')}</a>
-              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['atomic_qcow2_cloud']}</p>
-          </div>
-          <div class="col-xs-12">
-            <h5 class="bold">${_('Raw Image')}</h5>
-            <p>${Markup(_('This is Fedora %(rel)s Cloud Atomic Host in a compressed raw image format. If you\'re not sure what to use, try this.')) % {'rel':global_variables.release['curr_id']}}</p>
-            <a class="btn btn-success download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}.x86_64.raw.xz" role="button">${_('Download')}</a>
-              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['atomic_raw_cloud']}</p>
-          </div>
-      </div>
-
-      <!-- Desktop -->
-      <div class="row hidden-xs">
-          <div class="col-sm-6">
-            <h5 class="bold">${_('qcow2 Image')}</h5>
-            <p>${Markup(_('This is Fedora %(rel)s Cloud Atomic Host in a Qcow2-formatted image for use with OpenStack.')) % {'rel':global_variables.release['curr_id']}}</p>
-          </div>
-          <div class="col-sm-6">
-            <h5 class="bold">${_('Raw Image')}</h5>
-            <p>${Markup(_('This is Fedora %(rel)s Cloud Atomic Host in a compressed raw image format. If you\'re not sure what to use, try this.')) % {'rel':global_variables.release['curr_id']}}</p>
-          </div>
-      </div>
-      <div class="row hidden-xs">
-          <div class="col-sm-6">
-            <a class="btn btn-success download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}.x86_64.qcow2" role="button">${_('Download')}</a>
-              <p class="caption">${_('64-bit %sMB Qcow2 Image') % global_variables.iso_size['atomic_qcow2_cloud']}</p>
-          </div>
-          <div class="col-sm-6">
-            <a class="btn btn-success download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}.x86_64.raw.xz" role="button">${_('Download')}</a>
-              <p class="caption">${_('64-bit %sMB xz-Compressed Raw Image') % global_variables.iso_size['atomic_raw_cloud']}</p>
-          </div>
-      </div>
-      <!-- end Desktop -->
-
-      <!-- Start Vagrant -->
-        <div class="row">
-            <div class="col-xs-12 top-margin">
-              <h3>${_('Atomic Host Images for Vagrant')}</h3>
-              <p>${_('These images are Vagrant Boxes images for deployment using Vagrant.')}</p>
-            </div>
-        </div>
-        <!-- Mobile -->
-        <div class="row visible-xs">
-          <div class="col-xs-12">
-            <h5 class="bold">${_('VirtualBox Image')}</h5>
-            <p>${_('If you\'re using Vagrant on Mac OS X or Windows, this is likely the image you\'ll want to use.')}</p>
-            <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['curr_cloud_id']}-${global_variables.release['atomic_composedate']}.x86_64.vagrant-virtualbox.box" role="button">${_('VirtualBox Image')}</a>
-              <p class="caption">${_('64-bit %sMB VirtualBox Atomic Host Vagrant Image') % global_variables.iso_size['atomic_VBvag_cloud']}</p>
-          </div>
-          <div class="col-xs-12">
-            <h5 class="bold">${_('libvirt/KVM Image')}</h5>
-            <p>${_('If you\'re using Vagrant on Fedora, this is the image you\'ll want to use.')}</p>
-            <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['curr_cloud_id']}-${global_variables.release['atomic_composedate']}.x86_64.vagrant-libvirt.box" role="button">${_('libvirt/KVM Image')}</a>
-              <p class="caption">${_('64-bit %sMB libvirt/KVM Atomic Host Vagrant Image') % global_variables.iso_size['atomic_libvag_cloud']}</p>
-          </div>
-        </div>
-
-          <!-- Desktop -->
-        <div class="row hidden-xs">
-          <div class="col-sm-6">
-            <h5 class="bold">${_('VirtualBox Image')}</h5>
-            <p>${_('If you\'re using Vagrant on Mac OS X or Windows, this is likely the image you\'ll want to use.')}</p>
-          </div>
-          <div class="col-sm-6">
-            <h5 class="bold">${_('libvirt/KVM Image')}</h5>
-            <p>${_('If you\'re using Vagrant on Fedora, this is the image you\'ll want to use.')}</p>
-          </div>
-        </div>
-        <div class="row hidden-xs">
-          <div class="col-sm-6">
-            <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['curr_cloud_id']}-${global_variables.release['atomic_composedate']}.x86_64.vagrant-virtualbox.box" role="button">${_('VirtualBox Image')}</a>
-              <p class="caption">${_('64-bit %sMB VirtualBox Atomic Host Vagrant Image') % global_variables.iso_size['atomic_VBvag_cloud']}</p>
-          </div>
-          <div class="col-sm-6">
-            <a class="btn btn-success btn-fix download-cloud download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Atomic-Vagrant-${global_variables.release['curr_cloud_id']}-${global_variables.release['atomic_composedate']}.x86_64.vagrant-libvirt.box" role="button">${_('libvirt/KVM Image')}</a>
-              <p class="caption">${_('64-bit %sMB libvirt/KVM Atomic Host Vagrant Image') % global_variables.iso_size['atomic_libvag_cloud']}</p>
-          </div>
-        </div>
-      <!-- End Vagrant -->
-
-
-      <!-- Start Amazon -->
-        <div class="row">
-            <div class="col-xs-12 top-margin">
-              <h3>${_('Atomic Host Cloud Images for Amazon Public Cloud EC2')}</h3>
-              <p>${_('The links below will provide you listings of available AMIs by region with buttons to launch them in your Amazon Web Services account. AMI IDs for usage with the AWS Console or command-line tools are also provided.')}</p>
-              <p>${_('All images are available in two formats: a GP2 format which uses faster SSD storage, and a standard format which is more suitable if you have infrequently accessed data and you want to keep storage cost low.')}</p>
-            </div>
-        </div>
-        <div class="row">
-          <div class="col-xs-12">
-            <h5 class="bold">${_('Hardware Virtual Machine (HVM)')}</h5>
-
-            <!-- Modal for EC2 GP2 Cloud Atomic Host HVM Instances -->
-            <button type="button" class="btn btn-success btn-fix download-cloud-splash" data-toggle="modal" data-target=".GP2-atomic-EC2">${_('GP2 HVM AMIs')}</button>
-            <div class="modal fade GP2-atomic-EC2" tabindex="-1" role="dialog" aria-hidden="true">
-              <div class="modal-dialog modal-cloud">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
-                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s GP2 Atomic Host Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
-                  </div>
-                  <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th>${_('Region')}</th>
-                        <th class="hidden-xs">${_('AMI ID')}</th>
-                        <th>${_('Launch')}</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI" class="hidden-xs">${global_variables.GP2_HVM_atomic_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.GP2_HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.GP2_HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-            <!-- Modal for EC2 Standard Cloud Atomic Host HVM Instances -->
-            <p><button type="button" class="btn btn-success btn-fix download-cloud-splash" data-toggle="modal" data-target=".atomic-EC2">${_('Standard HVM AMIs')}</button></p>
-            <div class="modal fade atomic-EC2" tabindex="-1" role="dialog" aria-hidden="true">
-              <div class="modal-dialog modal-cloud">
-                <div class="modal-content">
-                  <div class="modal-header">
-                    <button type="button" class="close" data-dismiss="modal"><span aria-hidden="true">&times;</span><span class="sr-only">${_('Close')}</span></button>
-                    <h4 class="modal-title">${Markup(_('Fedora %(rel)s Standard Atomic Host Cloud HVM AMIs')) % {'rel':global_variables.release['curr_id']}}</h4>
-                  </div>
-                  <table class="table table-hover">
-                    <thead>
-                      <tr>
-                        <th>${_('Region')}</th>
-                        <th class="hidden-xs">${_('AMI ID')}</th>
-                        <th>${_('Launch')}</th>
-                      </tr>
-                    </thead>
-                    <tbody>
-                      <tr py:for="r in global_variables.EC2_regions">
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI">${_(r.long)}</td>
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI" class="hidden-xs">${global_variables.HVM_atomic_AMI[r.code]}</td>
-                        <td py:if="r.code in global_variables.HVM_atomic_AMI" class="text-center"><a href="${global_variables.path_stats['path']}/${global_variables.path_stats[r.short]}${global_variables.HVM_atomic_AMI[r.code]}"><span class="fa fa-cloud" aria-hidden="true"></span></a></td>
-                      </tr>
-                    </tbody>
-                  </table>
-                </div>
-              </div>
-            </div>
-
-
-          </div>
-        </div>
-      <!-- End Amazon -->
-    <hr />
-    <xi:include href="../../../templates/export-regulations.html" />
-  </div>
-
-    <div class="col-md-3 col-xs-12 col-md-offset-1">
-        <h3>${_('Other Downloads')}</h3>
-        <p>
-          ${_('Atomic Host Image:')}
-          <ul>
-            <li><p><a class="download-cloud-splash" href="${global_variables.path['download_atomic']}/stable/Cloud_Atomic/x86_64/iso/Fedora-Cloud_Atomic-x86_64-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}.iso">${_('64-bit Atomic Host ISO image')}</a></p></li>
-          </ul>
-        </p>
-          <div class="bottom-margin">
-          <py:choose>
-            <py:when test="global_variables.release['curr_state'] == 'Alpha'">
-              <h3>${Markup(_('Try Fedora %(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h3>
-              <a href="${path}/${lang}/cloud/prerelease"><img alt="Fedora ${global_variables.release['next_id']} Alpha is here!" src="${path}/static/images/banners/f${global_variables.release['next_id']}alpha.png" /></a>
-            </py:when>
-            <py:when test="global_variables.release['curr_state'] == 'Beta'">
-              <h3>${Markup(_('Try Fedora %(rel)s %(state)s')) % {'rel':global_variables.release['next_id'], 'state':global_variables.release['curr_state']}}</h3>
-              <a href="${path}/${lang}/cloud/prerelease"><img alt="Fedora ${global_variables.release['next_id']} Beta is here!" src="${path}/static/images/banners/f${global_variables.release['next_id']}beta.png" /></a>
-            </py:when>
-          </py:choose>
-          </div>
-          <noscript>
-          <div class="bottom-margin">
-            <h3>${_('Verify')}</h3>
-              <ul>
-              <li>
-                  <p><a href="/verify">${_('Verify your Image')}</a></p>
-              </li>
-              </ul>
-          </div>
-          </noscript>
     </div>
   </div>
-</div>
+  </div>
 
   </body>
 </html>
