flocktofedora: Make the schedule archive clearer

--- a/flocktofedora.org/data/content/schedule/index.html
+++ b/flocktofedora.org/data/content/schedule/index.html
@@ -18,6 +18,8 @@
 	<div class="col-xs-12 bottom-margin">
 	  <h1>${_('Flock Schedule')}</h1>
           <p>${_('The schedule for Flock 2016 is now available.')} <a href="https://flock2016.sched.org/">${_('Visit the schedule now.')}</a></p>
+
+	  <h2>${_('Older Flock Schedules')}</h2>
 	  <p><a href="https://flock2015.sched.org">${_('Flock 2015 schedule')}</a></p>
 	</div>
 
