--- a/arm.fedoraproject.org/data/content/index.html
+++ b/arm.fedoraproject.org/data/content/index.html
@@ -435,6 +435,7 @@
     </div>
   </div>
 
+<!-- News
       <py:choose>
         <py:when test="global_variables.release['curr_state'] == 'Alpha'">
           <div class="newsbox">
@@ -470,6 +471,6 @@
           </div>
         </py:otherwise>
       </py:choose>
-
+-->
 </body>
 </html>
