Revert "no atomic images for F24 release - they will be there later"
This reverts commit 2a909b37c8b7bd415555012a1cdb4614016b3fde.

--- a/getfedora.org/data/content/cloud/download/index.html
+++ b/getfedora.org/data/content/cloud/download/index.html
@@ -35,8 +35,7 @@
             <p>${_('There are two main versions of Fedora Cloud available:')}
               <ul>
                 <li>${Markup(_('&lt;a href="index.html"&gt;Base images&lt;/a&gt; suitable for creating VMs.'))}</li>
-<!--                <li>${Markup(_('&lt;a href="atomic.html"&gt;Atomic Host images&lt;/a&gt; for creating hosts for container deployment.'))}</li>
--->
+                <li>${Markup(_('&lt;a href="atomic.html"&gt;Atomic Host images&lt;/a&gt; for creating hosts for container deployment.'))}</li>
               </ul>
             </p>
         </div>
@@ -57,7 +56,7 @@
           <div class="collapse navbar-collapse navbar-center">
               <ul class="nav navbar-nav">
                   <li class=""><a href="index.html" class="active">${_('Base Images')}</a></li>
-<!--                  <li class=""><a href="atomic.html">${_('Atomic Host Images')}</a></li> -->
+                  <li class=""><a href="atomic.html">${_('Atomic Host Images')}</a></li>
                   <li class=""><a href="docker.html">${_('Docker Image')}</a></li>
               </ul>
           </div>
