Revert "drop 32bit cloud and atomic checksum files in verify page"
This reverts commit 1fb82e9ee64b5008ca6fd99ea5b1a930b1e21364.

--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -61,13 +61,12 @@
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="https://dl.fedoraproject.org/pub/alt/atomic/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Images-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For 64-bit images')}</a>
             </div>
-<!--            <div class="h-body text-center">
+            <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Cloud_Images-i386-${global_variables.release['curr_id']}-CHECKSUM">${_('For 32-bit images')}</a>
             </div>
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="https://dl.fedoraproject.org/pub/alt/atomic/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Images-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For Atomic Installer')}</a>
             </div>
--->
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Docker-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For Docker')}</a>
             </div>
