--- a/getfedora.org/data/content/verify.html
+++ b/getfedora.org/data/content/verify.html
@@ -59,13 +59,13 @@
             </div>
             <h4 class="uppercase">${_('Cloud')}</h4>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="https://dl.fedoraproject.org/pub/alt/atomic/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Images-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For 64-bit images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Cloud_Images-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For Base images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Cloud_Images-i386-${global_variables.release['curr_id']}-CHECKSUM">${_('For 32-bit images')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="https://dl.fedoraproject.org/pub/alt/atomic/stable/CloudImages/x86_64/images/Fedora-CloudImages-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Atomic images')}</a>
             </div>
             <div class="h-body text-center">
-              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="https://dl.fedoraproject.org/pub/alt/atomic/stable/Cloud-Images/x86_64/Images/Fedora-Cloud-Images-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For Atomic Installer')}</a>
+              <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="https://dl.fedoraproject.org/pub/alt/atomic/stable/Atomic/x86_64/iso/Fedora-Atomic-${global_variables.release['curr_id']}-${global_variables.release['atomic_composedate']}-x86_64-CHECKSUM">${_('For Atomic Installer')}</a>
             </div>
             <div class="h-body text-center">
               <a class="btn btn-default btn-topmargin btn-verify btn-checksum" href="./static/checksums/Fedora-Docker-x86_64-${global_variables.release['curr_id']}-CHECKSUM">${_('For Docker')}</a>
