fix Astronomy link in labs index

--- a/labs.fedoraproject.org/data/content/index.html
+++ b/labs.fedoraproject.org/data/content/index.html
@@ -20,7 +20,7 @@
         <div class="col-md-5 col-md-offset-1 text-center fadescreen design">
           <div class="spin-banner"><a href="/${lang}/astronomy"><img class="screenshot-banner" src="${path}/static/images/astronomy-banner.png" alt="Astronomy banner" /></a></div>
           <a href="/${lang}/astronomy"><img class="screenshot" src="${path}/static/images/screenshots/screenshot-astronomy.jpg" alt="Astronomy Screenshot" /></a>
-          <div class="screenshot-text bottom-border"><a href="/${lang}/Astronomy"><h3>${_('Explore the Outer Space.')}</h3></a>
+          <div class="screenshot-text bottom-border"><a href="/${lang}/astronomy"><h3>${_('Explore the Outer Space.')}</h3></a>
           <span class="grey">${_('Powerful completely open-source and free tool for amateurs and professionals.')}</span></div>
         </div>
         <div class="col-md-5 text-center fadescreen">
