Update flocktofedora.org with new hotel information

--- a/flocktofedora.org/data/content/location/index.html
+++ b/flocktofedora.org/data/content/location/index.html
@@ -25,7 +25,9 @@
 		<div class="panel-body">
 		  <p>${_('Flock lodging, as well as conference proceedings, will be held at the Best Western Premier Krakow. Room rate for a single or double (two twin beds) is approximately €65 per night. Wifi is freely available in public areas and guest rooms. Free breakfast is provided.')}</p>
 		  <p><strong>${_('Do you want to book a room?')}</strong> ${_('Download the hotel form, fill it in, and return to the hotel via the email or fax noted on the form itself.')} ${_('Unfortunately, an online booking code is not available currently for this hotel.')}</p>
-		  <p><a href="../../../static/images/hotel-form-2016.pdf">${_('Download now...')}</a></p>
+          <p><strong>${_('The main hotel is now full for some nights.')}</strong> ${_('However, the Best Western Efekt Express which is located in the same location and shares a parking lot with our conference hotels has rooms and is honoring the same rate.  The form for this hotel is below.')}</p>
+		  <p><a href="../../../static/images/hotel-form-2016-efekt.pdf">${_('Download the form for the Best Western Efekt Express - Note: This hotel has rooms available.')}</a></p>
+		  <p><a href="../../../static/images/hotel-form-2016.pdf">${_('Download the form for the Best Western Premier Krakow - Note: This hotel is now full on some conference nights.')}</a></p>
 		  <p><strong>${_('Do you want to fill out the form on your Fedora system?')}</strong> ${_('Try the xournal package already available for current Fedora releases. You can insert text, and sign with a pointing device, touch display, or drawing tablet. Then export the result to another PDF file and return via email.')}</p>
 		</div>
 	      </div>
