--- a/fudcon.fedoraproject.org/data/content/LATAM/index.html
+++ b/fudcon.fedoraproject.org/data/content/LATAM/index.html
@@ -2,7 +2,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
-<title>FUDCon Córdoba</title>
+<title>FUDCon Puno</title>
 <link href="${path}/static/css/fudcon.css" rel="stylesheet" type="text/css" />
 </head>
 <script type="text/javascript">
@@ -29,7 +29,7 @@
           Agenda
         </li>
         <li class="top_menu_element">
-          <a href="https://fedoraproject.org/wiki/FUDCon:Cordoba_2015#Pre-registration" target="_blank">Registration</a>
+          <a href="https://fedoraproject.org/wiki/FUDCon:Puno_2016#Pre-registration" target="_blank">Registration</a>
         </li>
       </ul>
       <!-- End Menu Section -->
@@ -43,14 +43,14 @@
   <div class="splash_container" id="index_splash">
     <div class="splash_content">
       <div class="splash_text">
-        <h1>FUDCon Argentina 2015</h1>
+        <h1>FUDCon Perù 2016</h1>
         <h2>FUDCon is the Fedora Users and Developers Conference, a major free software event held in various regions around the world, usually annually per region. FUDCon is a combination of sessions, talks, workshops, and hackfests. <br />
           FUDCon is always free to attend for anyone in the world.</h2>
-        <a class="button_big" href="https://fedoraproject.org/wiki/FUDCon:Cordoba_2015#Pre-registration" target="_blank">Register now!</a>
+        <a class="button_big" href="https://fedoraproject.org/wiki/FUDCon:Puno_2016#Pre-registration" target="_blank">Register now!</a>
       </div>
       <!-- Start Featured Image -->
       <div class="splash_img">
-        <img src="${path}/static/images/cordoba.jpg" width='630' height='259' alt="Córdoba City" title="Argentina 2015 FUDCon"/>
+        <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Vista_de_Puno_y_el_Titicaca%2C_Per%C3%BA%2C_2015-08-01%2C_DD_61.JPG/640px-Vista_de_Puno_y_el_Titicaca%2C_Per%C3%BA%2C_2015-08-01%2C_DD_61.JPG" width="630" height="259" alt="Puno City" title="Di Diego Delso, Wikipedia - Creative Commons Attribution-Share Alike 4.0" href="http://creativecommons.org/licenses/by-sa/4.0"/>
       </div>
       <!-- End Featured Image -->
     </div>
@@ -58,10 +58,11 @@
   <div class="central_container_mil">
     <div class="central_content" id="home">
       <div class="one_column_division">
-        <div class="column_row_img" id="column_one_cordoba"></div>
-        <h4>FUDCon will be held in Argentina</h4>
-        <h3> Córdoba - September 10 - September 12, 2015</h3>
-        <p><strong>FUDCon (Fedora Users and Developers Conference)</strong> is an important event in the world of free software that is held in different parts of the world, typically once a year to the region. The FUDCon is a combination of sessions, talks, workshops and hackfest in which project participants can work on specific initiatives. Topics include: infrastructure, development of features, construction and / or consolidation of the community, management and governance, marketing, testing and QA, packaging, etc..</p>
+        <div class="column_row_img" id="column_one_puno"></div>
+        <h4>The 2016 LATAM FUDCon will be held in Perù</h4>
+        <h3>Puno - October 13 - October 16, 2016</h3>
+        <p><strong><a href="https://fedoraproject.org/wiki/FUDCon" title="FUDCon">FUDCon (Fedora Users and Developers Conference)</a></strong> a major free software event held in various regions around the world, usually annually per region. FUDCon is a combination of sessions, talks, workshops, and hackfests in which contributors work on specific initiatives. Topics include infrastructure, feature development, community building, general management and governance, marketing, testing and QA, packaging, etc. <br />
+        FUDCon is always free to attend for anyone in the world. </p>
         <p><a href="http://www.fudconlatam.org/"><strong>Learn more (Spanish)</strong></a></p>
       </div>
       <div class="one_column_division">
@@ -94,7 +95,7 @@
       <div class="footer_contact_item"><a href="http://twitter.com/share" class="twitter-share-button" data-count="horizontal">Tweet</a><script type="text/javascript" src="http://platform.twitter.com/widgets.js"></script></div>
       <div class="footer_contact_item"><iframe src="http://www.facebook.com/plugins/like.php?href&amp;send=false&amp;layout=button_count&amp;width=90&amp;show_faces=false&amp;action=like&amp;colorscheme=light&amp;font=lucida+grande&amp;height=21" scrolling="no" frameborder="0" style="border:none; overflow:hidden; width:90px; height:21px;" allowTransparency="true"></iframe></div>
       <div class="footer_contact_item"><script type="text/javascript" src="https://apis.google.com/js/plusone.js"></script></div>
-      <div class="button_container"><a class="button_big" id="register_footer" href="https://fedoraproject.org/wiki/FUDCon:Cordoba_2015#Pre-registration" target="_blank">Register now!</a></div>
+      <div class="button_container"><a class="button_big" id="register_footer" href="https://fedoraproject.org/wiki/FUDCon:Puno_2016#Pre-registration" target="_blank">Register now!</a></div>
       <!--<div class="button_container"><script type="text/javascript" src="http://platform.linkedin.com/in.js"></script><script type="in/share"></script></div>-->
     </div>
   </div>
