--- a/fudcon.fedoraproject.org/data/content/LATAM/location.html
+++ b/fudcon.fedoraproject.org/data/content/LATAM/location.html
@@ -32,7 +32,7 @@
           Agenda
         </li>
         <li class="top_menu_element">
-          <a href="https://fedoraproject.org/wiki/FUDCon:Cordoba_2015#Pre-registration">Registration</a>
+          <a href="https://fedoraproject.org/wiki/FUDCon:Puno_2016#Pre-registration">Registration</a>
         </li>
       </ul>
       <!-- End Menu Section -->
@@ -46,39 +46,34 @@
   <div class="splash_container">
     <div class="splash_content">
       <div class="splash_text_section">
-        <h1>FUDCon Córdoba 2015</h1>
+        <h1>FUDCon Perù 2016</h1>
         <h2>FUDCon is the Fedora Users and Developers Conference, a major free software event held in various regions around the world, usually annually per region. FUDCon is a combination of sessions, talks, workshops, and hackfests. <br />
-          FUDCon is always free to attend for anyone in the world. </h2>
+          FUDCon is always free to attend for anyone in the world.</h2>
       </div>
     </div>
   </div>
   <div class="central_container">
     <div class="central_content">
       <div class="one_column_division">
-        <h4>Córdoba - Sep 10 - 12, 2015</h4>
+        <h4>Puno - October 13 - October 16, 2016</h4>
         <br />
         <h3>Location</h3>
-          <h2>Córdoba, Argentina</h2>
-          <p>Strategically located in the center of Argentina, Córdoba province, with its important potential tourism, offers everything and more for the events organization, conferences, fairs and incentives. It's a territory that has many host cities that provide various services, exceptional scenic beauty and an important historical - cultural heritage. The favorable climate that offers all the year, coupled with its international airport routes access, telecommunications, large hotel infrastructure and venues, cuisine first level, casinos and shopping are just some of the factors that position Córdoba as highly competitive venue for the successful implementation of international events.</p>
+          <h2><a href="http://goo.gl/maps/PkVZc">Puno, Perú</a></h2>
+          <p> Universidad Nacional del Altiplano Puno - Venue</p>
+          <a href="http://goo.gl/maps/XW7Gy">Google maps UNAP Universidad Nacional del Altiplano Puno</a><br />
+          <a href="http://www.unap.edu.pe/">Official web site: UNAP</a><br />
+          Audience of 500 people for the first day in the morning and last day in the evening (opening and closing) and 3 rooms of 60 people
           <h2>Useful information about the province:</h2>
-          <ul>
-            <li>Area: 165.321 km²</li>
-            <li>Capital province: Córdoba</li>
-            <li>Population: 3.066.801</li>
-            <li>Distance from Buenos Aires capital: 700 km.</li>
-            <li>Weather: mediterranean, mild y subtropical with dry season.</li>
-            <li>Average annual temperature: 18 - 21°C</li>
-            <li>Average annual precipitation: 500 - 800 (mm)</li>
-            <li>Meters above sea level: 352 - 544</li>
-            <li>Calling code: International: 54 351. From Argentina: 0351.</li>
-          </ul>
         <h2>Useful info:</h2>
         <ul>
           <li>
-            <a class="external text" href="https://fedoraproject.org/wiki/FUDCon:Cordoba_2015#Accommodation">Accomodation</a>
+            <a class="external text" href="https://fedoraproject.org/wiki/FUDCon:Puno_2016#Lodging_.2F_Hotel">Accomodation</a>
           </li>
         	<li>
-            <a class='external text' href='https://fedoraproject.org/wiki/FUDCon:Cordoba_2015#Flights'>Flights</a>
+            <a class='external text' href='https://fedoraproject.org/wiki/FUDCon:Puno_2016#Travel_and_transportation'>Flights</a>
+          </li>
+          <li>
+            <a class="external text" href="https://fedoraproject.org/wiki/FUDCon:Puno_2016#Packing_List">Packing List</a>
           </li>
         </ul>
       </div>
